# multilingual-markdown

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CNAME  LICENSE  MANIFEST.in  README.base.md  README.fr.md  README.ja.md  README.jp.md  README.ko.md  README.kr.md  README.md  cli-test.py  files.txt  index.html  mkdocs.yml  mmg.yml  multilang_md.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_dev_windows.txt  setup.cfg  setup.py  test.base.md  test.kr.md  test.md  versions.json
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  gh-pages.yaml  python-publish.yml
.pre-commit-hooks/: run-validation.py
1.0/: 404.html  index.html  sitemap.xml
1.0.3/: 404.html  index.html  sitemap.xml
1.0.3/base/index.base/: index.html
1.0.3/base/license.base/: index.html
1.0.3/fr/: index.html
1.0.3/fr/license/: index.html
1.0.3/ja/: index.html
1.0.3/ja/license/: index.html
1.0.3/ko/: index.html
1.0.3/ko/license/: index.html
1.0.3/license/: index.html
1.0.3/search/: search_index.json
1.0/assets/javascripts/: bundle.78eede0e.min.js.map
1.0/fr/: index.html
1.0/fr/license/: index.html
1.0/ja/: index.html
1.0/ja/license/: index.html
1.0/ko/: index.html
1.0/ko/license/: index.html
1.0/license/: index.html
1.0/search/: search_index.json
2.0/: 404.html  index.html  objects.inv  sitemap.xml
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/advanced-usage/cli-batch-processing/: index.html
2.0.0/advanced-usage/cli-jupyter-notebook/: index.html
2.0.0/advanced-usage/cli-validation/: index.html
2.0.0/basic-usage/cli-html-pdf/: index.html
2.0.0/basic-usage/cli-recursive/: index.html
2.0.0/basic-usage/create-base-file/: index.html
2.0.0/fr/: index.html
2.0.0/fr/license/: index.html
2.0.0/getting-started/installation/: index.html
2.0.0/getting-started/quick-start/: index.html
2.0.0/getting-started/upgrade-and-uninstall/: index.html
2.0.0/ja/: index.html
2.0.0/ja/license/: index.html
2.0.0/ko/: index.html
2.0.0/ko/license/: index.html
2.0.0/license/: index.html
2.0.0/misc/contributing/: index.html
2.0.0/misc/troubleshooting/: index.html
2.0.0/programming-guide/advanced-reference/: index.html
2.0.0/programming-guide/api-examples/: index.html
2.0.0/programming-guide/python-api/: index.html
2.0/advanced-usage/cli-batch-processing/: index.html
2.0/advanced-usage/cli-jupyter-notebook/: index.html
2.0/advanced-usage/cli-validation/: index.html
2.0/assets/javascripts/: bundle.726fbb30.min.js.map
2.0/basic-usage/cli-html-pdf/: index.html
2.0/basic-usage/cli-recursive/: index.html
2.0/basic-usage/create-base-file/: index.html
2.0/fr/: index.html
2.0/fr/license/: index.html
2.0/getting-started/installation/: index.html
2.0/getting-started/quick-start/: index.html
2.0/getting-started/upgrade-and-uninstall/: index.html
2.0/ja/: index.html
2.0/ja/license/: index.html
2.0/ko/: index.html
2.0/ko/license/: index.html
2.0/license/: index.html
2.0/misc/contributing/: index.html
2.0/misc/troubleshooting/: index.html
2.0/programming-guide/advanced-reference/: index.html
2.0/programming-guide/api-examples/: index.html
2.0/programming-guide/python-api/: index.html
2.0/search/: search_index.json
2.1/: 404.html  index.html  objects.inv  sitemap.xml
2.1/advanced-usage/cli-batch-processing/: index.html
2.1/advanced-usage/cli-jupyter-notebook/: index.html
2.1/advanced-usage/cli-validation/: index.html
2.1/basic-usage/cli-html-pdf/: index.html
2.1/basic-usage/cli-recursive/: index.html
2.1/basic-usage/create-base-file/: index.html
2.1/fr/: index.html
2.1/fr/license/: index.html
2.1/getting-started/installation/: index.html
2.1/getting-started/quick-start/: index.html
2.1/getting-started/upgrade-and-uninstall/: index.html
2.1/ja/: index.html
2.1/ko/: index.html
2.1/license/: index.html
PSmmg/: PSmmg.psm1
docs/: index.md  manual.md  mmg.yml
docs/base/: index.base.md  license.base.md
docs/stylesheets/: extra.css
example/: api_example.py  example.base.md  example.en.md  example.fr-FR.md  example.fr.md  example.ja-JP.md  example.ko-KR.md  example.kr.md  example.md  photothumb.db
examples/: api_example_convert_file.py  api_example_convert_string.py  api_example_convert_with_cfg.py  api_example_health_check.py  api_example_reserved_tags.py  api_example_save_file.py  api_example_save_file_no_suffix_option.py  api_example_set_cfg.py  sample.base.md  sample.fr-FR.md  sample.ja-JP.md  sample.ko-KR.md  sample.md
examples/api-examples/: api_example_convert_with_cfg.py  api_example_create_toc.py  api_example_reserved_tags.py  api_example_save_file.py  api_example_save_file_no_suffix_option.py  api_example_set_cfg.py  sample.base.md
examples/cli-examples/: sample_jupyter.base.ipynb
examples/generated_from_jupyter/: sample_jupyter.en-US.html  sample_jupyter.en-US.ipynb  sample_jupyter.fr-FR.html  sample_jupyter.fr-FR.ipynb  sample_jupyter.ja-JP.html  sample_jupyter.ja-JP.ipynb  sample_jupyter.ko-KR.html
examples/generated_from_markdown/: sample.fr-FR.html  sample.html  sample.ja-JP.html  sample.ja-JP.md  sample.ko-KR.html
examples/validation-examples/: bad_jupyter.base.ipynb  bad_md.base.md  good_md.base.md
latest/fr/: index.html
latest/ja/: index.html
latest/ko/: index.html
mmg/: __init__.py  api.py  base_item.py  base_parser.py  classifier.py  cli.py  cli_log.py  cli_process.py  config.py  exceptions.py  health.py  output.py  single_gen.py  toc.py  utils.py
mmg/css/: github-dark.css  github-light.css
mmgcli/: __init__.py  __main__.py  base_parser.py  cli.py  multilang_md.py  single_gen.py  utils.py
test/: test_code_block_tracker.py
tests/: conftest.py  test_code_block_tracker.py  test_examples.py  test_parse_toc_options.py
unstable/: 404.html  index.html  sitemap.xml
unstable/contribution/: index.html
unstable/fr/: index.html
unstable/ja/: index.html
unstable/ko/: index.html
unstable/license/: index.html
unstable/search/: search_index.json
(+353 files in other folders)
