[tool.poetry]
name = "mmg"
version = "2.0.0-dev"
description = "Command line interface and Python API to generate i18n documents"
authors = ["Hong-ryul Jung <jung.hr.1206@gmail.com>"]
license = "MIT"
readme = "README.md"
# homepage = "https://python-poetry.org/"
repository = "https://github.com/ryul1206/multilingual-markdown"
keywords = [
	"i18n",
	"multilingual",
	"markdown",
	"language",
	"cli",
	"markdown-generator",
]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Operating System :: POSIX :: Linux",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: MacOS",
	"Topic :: Software Development :: Internationalization",
	"Topic :: Software Development :: Localization",
	"Topic :: Text Processing :: Markup :: Markdown",
	"Topic :: Text Processing :: Markup :: HTML",
]
packages = [
	{ include = "mmg" }, # Include the folder
]
exclude = [
	".github",
	".venv",
	".vscode",
	"docs",
	"examples",
	"tests",
]

[tool.check-manifest]
ignore = [
	".github",
	".github/*",
	".venv",
	".venv/*",
	".vscode",
	".vscode/*",
	"docs",
	"docs/*",
	"examples",
	"examples/*",
	"tests",
	"tests/*",
	"CHANGELOG.md",
	"READEME.base.md",
]

[tool.poetry.scripts]
mmg = "mmg:cli.main"

[tool.poetry.dependencies]
python = ">=3.8, <4"
click = "^8"
emoji = "^0.6"
markdown = "^3.3"
weasyprint = "^59.0"
nbconvert = "^7.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
check-manifest = "^0.49"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"
mkdocs-static-i18n = {extras = ["material"], version = "^1.0.2"}
mkdocs-jupyter = "^0.24.2"
mkdocstrings-python = "^1.6.0"
mike = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
