[project]
name = "mmg"
version = "2.1.0"
description = "Command line interface and Python API to generate i18n documents"
authors = [
	{name = "Hong-ryul Jung", email = "jung.hr.1206@gmail.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8, <4"
keywords = [
	"i18n",
	"multilingual",
	"markdown",
	"language",
	"cli",
	"markdown-generator",
]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Operating System :: POSIX :: Linux",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: MacOS",
	"Topic :: Software Development :: Internationalization",
	"Topic :: Software Development :: Localization",
	"Topic :: Text Processing :: Markup :: Markdown",
	"Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
	"click>=8.0.0",
	"emoji>=0.6.0",
	"markdown>=3.3.0",
	"nbconvert>=7.6.0",
	# For Python <3.14, allow PyYAML >=6.0.2. For Python >=3.14, require PyYAML >=6.0.3 due to compatibility.
	"pyyaml>=6.0.2",
	# "pyyaml>=6.0.2; python_version < '3.14'",
	# "pyyaml>=6.0.3; python_version >= '3.14'",
	# PyWIN32
	# "pywin32>=311; sys_platform == 'win32'",
]

[project.optional-dependencies]
pdf = [
	"weasyprint>=59.0.0",
]

[project.urls]
Homepage = "https://mmg.ryul1206.dev/"
Repository = "https://github.com/ryul1206/multilingual-markdown"
Changelog = "https://github.com/ryul1206/multilingual-markdown/blob/dev/CHANGELOG.md"

[project.scripts]
mmg = "mmg:cli.main"

[tool.hatch.build]
reproducible = true
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
packages = ["mmg"]

[tool.hatch.build.targets.sdist]
include = [
	"mmg",
	"README.md",
	"LICENSE",
	"CHANGELOG.md",
	"pyproject.toml"
]
exclude = [
	".github",
	".venv",
	".vscode",
	"docs",
	"examples",
	"logs",
	"tests",
]

[tool.check-manifest]
ignore = [
	".github",
	".github/*",
	".venv",
	".venv/*",
	".vscode",
	".vscode/*",
	"docs",
	"docs/*",
	"examples",
	"examples/*",
	"tests",
	"tests/*",
	"CHANGELOG.md",
	"READEME.base.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
	"check-manifest>=0.50",
	"pre-commit>=3.5.0",
	"ruff>=0.11.2",
]
test = [
	"pytest>=7.3.1",
]
docs = [
	"mkdocs>=1.4.3",
	"mkdocs-material>=9.1.17",
	"mkdocs-static-i18n[material]>=1.0.2",
	"mkdocs-jupyter>=0.24.8",
	"mkdocstrings-python>=1.11.1",
	"mike>=1.1.2",
	"mkdocs-exclude>=1.0.2",
	"mkdocs-site-urls>=0.2.0",
]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 128
